--- a/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
+++ b/web/src/app/components/guild-admin-navbar/guild-admin-navbar.component.sass
@@ -4,7 +4,7 @@
     
 .navbar
     position: fixed
-    align-items: baseline
+    align-content: start
     top: 50px
     bottom: 0px
     left: 0px
