add antiraid joinlog flush API endpoint [#159]

--- a/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
+++ b/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
@@ -5,6 +5,10 @@
 
         <app-slider [(ngModel)]="antiraidSettings.state">Antiraid-System enabled</app-slider>
 
+        <div class="mt-3">
+            <h3>Explaination</h3>
+        </div>
+
         <div class="mt-3 mw">
             <label for="i-regeneration">
                 Regeneration Duration<br />
