--- a/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
+++ b/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
@@ -9,12 +9,12 @@
             <h3>Explaination</h3>
             <i class="small">
                 The antiraid system works with the <a href="https://en.wikipedia.org/wiki/Token_bucket" target="_blank">token bucket</a>
-                system. Imagine a bucket which can fit the number of <span class="embeded">Burst Ammount</span> of tokens. At the start,
+                system. It works like a bucket which can fit the number of <span class="embedded">Burst Amounts</span> of tokens. At the start,
                 the bucket is completely filled up with tokens.
-                Everytime a member joins, one of these tokens is consumed and everytime, the specified 
-                <span class="embeded">Regeneration Period</span> is elapsed, one token is added to the bucket until it is completely
-                filled again. If the bucket is empty and another token is tried to be reserved, the antiraid system triggers.<br />
-                Following, the servers <span class="embeded">verification level</span> is set to <span class="embeded">highest</span>
+                Every time a member joins, one of these tokens is consumed and every time, the specified 
+                <span class="embedded">Regeneration Period</span> is elapsed, one token is added to the bucket until it is
+                full again. If the bucket is empty and another token is tried to be reserved, the antiraid system triggers.<br />
+                Following, the servers <span class="embedded">verification level</span> is set to <span class="embedded">highest</span>
                 and over the next 24 hours, all joining members are listed in the joinlog below. This list is then saved for the following
                 48 hours after the system has triggered.
             </i>
@@ -23,7 +23,7 @@
         <div class="mt-4 mw">
             <label for="i-regeneration">
                 Regeneration Duration<br />
-                <i class="small">This is the average, nominal ammount of seconds between two users join your server. 
+                <i class="small">This is the average, nominal amount of seconds between two users join your server. 
                     Maybe under or overcut this value as you prefer or as it works bet on your guild.</i>
             </label>
             <input id="i-regeneration" type="number" min="1" [(ngModel)]="antiraidSettings.regeneration_period">
@@ -31,9 +31,9 @@
 
         <div class="mt-4 mw">
             <label for="i-burst">
-                Burst Ammount<br />
-                <i class="small">This is the ammount of users which can join in a short period of time without triggering
-                    the antiraid system. Imagine it like a buffer which increased by one per join and decreases
+                Burst Amounts<br />
+                <i class="small">This is the amount of users which can join in a short period of time without triggering
+                    the antiraid system. It works like a buffer which increases by one per join and decreases
                     every elapse of the regeneration duration defined above.
                 </i>
             </label>
