Changed embeded -> embedded

--- a/web/src/app/routes/commands/commands.component.html
+++ b/web/src/app/routes/commands/commands.component.html
@@ -31,7 +31,7 @@
   >
     <div class="flex-center">
       <h5>{{ c.invokes[0] }}</h5>
-      <p class="embeded ml-2">{{ c.domain_name }}</p>
+      <p class="embedded ml-2">{{ c.domain_name }}</p>
       <span
         *ngIf="c.is_executable_in_dm"
         class="dmc-badge"
