--- a/web/src/app/routes/scoreboard/scoreboard.component.html
+++ b/web/src/app/routes/scoreboard/scoreboard.component.html
@@ -13,7 +13,7 @@
             <img [src]="s.member.avatar_url" width="40" height="40"/>
             <div>
                 <p class="m-0">{{s.member.user.username}}#{{s.member.user.discriminator}}</p>
-                <p class="embeded m-0">{{s.member.user.id}}</p>
+                <p class="embedded m-0">{{s.member.user.id}}</p>
             </div>
             <app-karma-tile class="ml-auto" [value]="s.value"></app-karma-tile>
         </a>
