--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -105,7 +105,7 @@ select
 //-----------------------------------
 
 
-.embeded
+.embedded
     padding: 2px 5px
     background-color: #2e0e0e66
     width: fit-content
