added a few more

--- a/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
+++ b/web/src/app/routes/guild-admin/antiraid/ga-antiraid.component.html
@@ -9,12 +9,12 @@
             <h3>Explaination</h3>
             <i class="small">
                 The antiraid system works with the <a href="https://en.wikipedia.org/wiki/Token_bucket" target="_blank">token bucket</a>
-                system. It works like a bucket which can fit the number of <span class="embeded">Burst Amounts</span> of tokens. At the start,
+                system. It works like a bucket which can fit the number of <span class="embedded">Burst Amounts</span> of tokens. At the start,
                 the bucket is completely filled up with tokens.
                 Every time a member joins, one of these tokens is consumed and every time, the specified 
-                <span class="embeded">Regeneration Period</span> is elapsed, one token is added to the bucket until it is
+                <span class="embedded">Regeneration Period</span> is elapsed, one token is added to the bucket until it is
                 full again. If the bucket is empty and another token is tried to be reserved, the antiraid system triggers.<br />
-                Following, the servers <span class="embeded">verification level</span> is set to <span class="embeded">highest</span>
+                Following, the servers <span class="embedded">verification level</span> is set to <span class="embedded">highest</span>
                 and over the next 24 hours, all joining members are listed in the joinlog below. This list is then saved for the following
                 48 hours after the system has triggered.
             </i>
