--- a/web/src/app/routes/login/login.component.html
+++ b/web/src/app/routes/login/login.component.html
@@ -1,11 +1,10 @@
-<div id="login" class="container-fluid text-center d-flex">
-    <div class="container-fluid">
-        <h1>LOGIN</h1>
-        <p>You need to be logged in to use shinpurus web interface.</p>
-        <div class="warning">
-            <img src="/assets/warning.svg" />
-            <span>This page is using cookies for maintaining user sessions after logging in.</span>
+<div class="login-container">
+    <div class="header-box">
+        <a>
+            <img height="200" src="/assets/landingpage/banner.png"/>
+        </a>
+        <div class="overlay">
         </div>
-        <a href="/_/loginwithdiscord"><button>LOG IN WITH YOUR DISCORD ACCOUNT</button></a>
     </div>
+    <p>asd</p>
 </div>
