--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -66,6 +66,10 @@
             border-radius: 5px
 
 
+.btn-login
+    padding: 2px 10px
+
+
 @media only screen and (max-width: 900px)
     #header
         .routes 
