--- a/web/src/app/routes/login/login.component.sass
+++ b/web/src/app/routes/login/login.component.sass
@@ -1,23 +1,28 @@
-#login
+@import '../../../sass/vars'
+@import '../../../sass/mixins'
     
-    .container-fluid
-        margin-top: 10vh
-
-    > div > *
-        margin-top: 30px
-
-
-.warning
+.login-container
+    position: absolute
+    top: 50px
+    left: 0px
+    right: 0px
+    
+.header-box
     display: flex
-    align-items: cenetr
-    justify-content: center
-    background-color: #fdd83554
-    border-radius: 5px
-    padding: 10px 20px
-    width: fit-content
-    margin: 0 auto 30px auto
+    width: 100%
+    height: calc(100vh - 50px)
+    background-image: url('/assets/landingpage/background.png')
+    background-position: 50%
+    background-repeat: no-repeat
+    background-size: cover
 
-    img
-        margin-right: 10px
-        width: 25px
-        height: 25px
+    .overlay
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background-image: linear-gradient(180deg, rgba($c-bg-general, 0) 70%, rgba($c-bg-general, 1) 95%, rgba($c-bg-general, 1) 100%)
+
+    a
+        margin: 30vh auto
