--- a/web/src/app/routes/login/login.component.sass
+++ b/web/src/app/routes/login/login.component.sass
@@ -1,28 +1,102 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
-    
+
+
+@keyframes btn-features-inner
+    0%
+        opacity: 0.75
+        clip-path: polygon(0% -80%, 50% -40%, 100% -80%, 100% -40%, 50% 0%, 0% -40%)
+    100%
+        opacity: 0.75
+        clip-path: polygon(0% 100%, 50% 140%, 100% 100%, 100% 140%, 50% 180%, 0% 140%)
+
+
+@keyframes btn-start-inner
+    0%
+        opacity: 0.75
+        clip-path: polygon(-20% 0%, -10% 0%, 0% 50%, -10% 100%, -20% 100%, -10% 50%)
+    100%
+        opacity: 0.75
+        clip-path: polygon(100% 0, 110% 0, 120% 50%, 110% 100%, 100% 100%, 110% 50%)
+
+
 .login-container
     position: absolute
     top: 50px
     left: 0px
     right: 0px
     
+
 .header-box
     display: flex
+    flex-direction: column
     width: 100%
-    height: calc(100vh - 50px)
+    height: calc(100vh - 40px + 5vh)
     background-image: url('/assets/landingpage/background.png')
     background-position: 50%
     background-repeat: no-repeat
     background-size: cover
+    clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%)
 
-    .overlay
-        position: absolute
-        top: 0
-        left: 0
+    > *
+        margin: 0 auto
+
+    > .logo
+        margin: 30vh auto 10vh auto
+
+    > .button
+        display: flex
+        
+        > button
+            position: relative
+            background-color: transparent
+            border: solid 1px white
+            border-radius: 0px !important
+            cursor: pointer
+
+            &:first-child
+                margin-right: 20px
+
+            &::before
+                content: ''
+                position: absolute
+                top: 0
+                left: 0
+                width: 100%
+                height: 100%
+                z-index: -1
+                background-color: #ffffff
+                opacity: 0
+                transition: all 0.25s ease
+                
+            &:first-child:hover::before
+                animation: btn-features-inner 1s ease
+
+            &:last-child:hover::before
+                animation: btn-start-inner 1s ease
+            
+
+.exmaple-tile
+    display: grid
+    width: 100%
+    grid-template-columns: 50% 50%
+    box-sizing: border-box
+    align-items: center
+
+    > *
+        padding: 20px
+
+    > img
         width: 100%
-        height: 100%
-        background-image: linear-gradient(180deg, rgba($c-bg-general, 0) 70%, rgba($c-bg-general, 1) 95%, rgba($c-bg-general, 1) 100%)
+        max-width: 500px
+        
+    &:nth-child(odd) > img
+        margin-left: auto
 
-    a
-        margin: 30vh auto
+    > div
+        max-width: 480px
+        h3
+            margin-bottom: 20px !important
+
+    &:nth-child(even) > div
+        margin-left: auto
