--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -8,6 +8,7 @@ $c-orange:  #F57C00
 $c-green:   #43A047
 $c-lime:    #8BC34A
 $c-cyan:    #03A9F4
+$c-purple:  #9C27B0
 
 $c-bg-general: $c-darkbnb
 $c-font-general: white
