--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -101,6 +101,11 @@ select
     &:hover
         background-color: darken($c-green, 5)
 
+.bg-purple
+    background-color: $c-purple
+    &:hover
+        background-color: darken($c-purple, 5)
+
 
 //-----------------------------------
 
