--- a/web/src/app/routes/login/login.component.sass
+++ b/web/src/app/routes/login/login.component.sass
@@ -2,6 +2,9 @@
 @import '../../../sass/mixins'
 
 
+$spacer-color: rgba(white, 0.25)
+
+
 @keyframes btn-features-inner
     0%
         opacity: 0.75
@@ -18,6 +21,12 @@
     100%
         opacity: 0.75
         clip-path: polygon(100% 0, 110% 0, 120% 50%, 110% 100%, 100% 100%, 110% 50%)
+
+
+hr
+    width: 90vw
+    max-width: 1300px
+    border-color: $spacer-color !important
 
 
 .login-container
@@ -84,7 +93,7 @@
     align-items: center
 
     > *
-        padding: 20px
+        padding: 0 20px
 
     > img
         width: 100%
@@ -100,3 +109,62 @@
 
     &:nth-child(even) > div
         margin-left: auto
+
+
+.more-features
+    text-align: center
+    margin: 100px 0px
+    
+    > *
+        padding: 10px 0px
+
+
+.getting-started-grid
+    display: grid
+    grid-template-columns: 50% 3px 50%
+    width: 100%
+    max-width: 1000px
+    margin: 80px auto
+    
+    > div.side
+        padding: 0px 80px
+        > h3
+            text-align: center
+            padding-bottom: 40px
+
+    > .mid-spacer
+        width: 100%
+        height: 100%
+        background-color: $spacer-color
+
+    .inv-button
+        width: 100%
+        display: block
+        margin: 0 auto 20px auto
+        box-sizing: border-box
+
+    .text-embed
+        font-family: Courier New, Courier, monospace
+        background-color: rgba(black, 0.25)
+        padding: 18px
+
+
+.link-list
+    display: flex
+    justify-content: center
+
+    > a
+        display: flex
+        align-items: center
+        border: solid 1px white
+        padding: 10px
+        margin: 40px 8px
+        +hover-btn
+        > img
+            margin-right: 10px
+
+
+.footer
+    margin-top: 50px
+    text-align: center
+    font-size: 14px
