add anonymous reports [#189]

--- a/web/src/app/components/spoiler/spoiler.component.html
+++ b/web/src/app/components/spoiler/spoiler.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex cursor-pointer" (click)="toggle()">
+<div class="d-flex cursor-pointer w-100" (click)="toggle()">
     <img 
         [style.transform]="rotation" 
         class="arrow-btn" 
