--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -236,6 +236,14 @@
     +hover-btn(1.07, 5px)
 
 
+.spoiler-button
+    margin-left: auto
+    padding: 0px 10px
+    background-color: transparent
+    border: solid 1px white
+    font-size: 12px
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
