fix header and api token route

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -2,8 +2,7 @@
 
 <div id="header" class="container-fluid">
   <a class="d-flex" routerLink="/guilds">
-    <img id="sp-logo" class="avatar" src="/assets/shinpuru-logo.png" />
-    <h1 class="ml-3">SHINPURU</h1>
+    <img id="sp-logo" height="30" src="/assets/shinpuru-logo.png" />
   </a>
 
   <div class="routes">
