--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -24,19 +24,19 @@
     background-color: $c-nqblack
     padding: 10px 10px
 
+    *
+        +my-auto
+
     h1
         font-size: 26px
-        +my-auto
 
     .avatar
         height: 30px
         width: 30px
         +round
-        +my-auto
 
     #heading
         font-size: 25px
-        +my-auto
 
     #user-info
         margin-right: 0
