--- a/web/src/app/routes/apitoken/apitoken.component.sass
+++ b/web/src/app/routes/apitoken/apitoken.component.sass
@@ -19,12 +19,13 @@ a
     margin-top: 10px
     border-radius: 5px
     max-width: 100%
+    word-break: break-all
 
 .warning
     background-color: #b71c1c
     padding: 10px
     border-radius: 5px
-    width: fit-content
+    width: 100% !important
 
     p
         margin: 0
