--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -85,26 +85,26 @@ select
 
 
 .bg-red
-    background-color: $c-red
+    background-color: $c-red !important
     &:hover
-        background-color: darken($c-red, 5)
+        background-color: darken($c-red, 5) !important
 
 
 .bg-orange
-    background-color: $c-orange
+    background-color: $c-orange !important
     &:hover
-        background-color: darken($c-orange, 5)
+        background-color: darken($c-orange, 5) !important
 
 
 .bg-green
-    background-color: $c-green
+    background-color: $c-green !important
     &:hover
-        background-color: darken($c-green, 5)
+        background-color: darken($c-green, 5) !important
 
 .bg-purple
-    background-color: $c-purple
+    background-color: $c-purple !important
     &:hover
-        background-color: darken($c-purple, 5)
+        background-color: darken($c-purple, 5) !important
 
 
 //-----------------------------------
