--- a/web/src/app/routes/guild-admin/karma/ga-karma.component.sass
+++ b/web/src/app/routes/guild-admin/karma/ga-karma.component.sass
@@ -1,6 +1,15 @@
 label, input
     display: block
 
+table, tbody, tr, th, td
+    border: solid 1px #6c757d
+
+th, td
+    padding: 5px 10px
+
+td > button
+    padding: 2px 5px
+
 .small
     opacity: 0.9
     font-size: 0.9em
