update login page [#172, #192]

--- a/web/src/app/routes/login/login.component.html
+++ b/web/src/app/routes/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="header-box">
         <div class="logo">
             <a>
-                <img height="200" src="/assets/landingpage/banner.png"/>
+                <img class="header-image" src="/assets/landingpage/banner.png"/>
             </a>
         </div>
         <div class="button">
@@ -90,7 +90,7 @@
             </a>
         </div>
         <div class="mid-spacer"></div>
-        <div class="side">
+        <div class="side self-host">
             <h3>SELF HOST</h3>
             <p class="text-embed">$ docker pull zekro/shinpuru</p>
             <a href="https://github.com/zekroTJA/shinpuru/wiki/docker">
