fix responsibility of info page [#192]

--- a/web/src/app/routes/info/info.component.html
+++ b/web/src/app/routes/info/info.component.html
@@ -82,7 +82,7 @@
                 </tr>
                 <tr>
                     <th>Invite URL</th>
-                    <td><a href="{{ sysinfo.bot_invite }}" target="_blank">{{ sysinfo.bot_invite }}</a></td>
+                    <td><a class="breakall" href="{{ sysinfo.bot_invite }}" target="_blank">{{ sysinfo.bot_invite }}</a></td>
                 </tr>
                 <tr>
                     <th>Guilds Serving</th>
