--- a/web/src/app/routes/usersettings/usersettings.component.sass
+++ b/web/src/app/routes/usersettings/usersettings.component.sass
@@ -11,6 +11,12 @@ a
     color: cyan !important
     text-decoration: underline !important
 
+.settings-container
+    background-color: $c-nqblack
+    padding: 10px 15px 15px 15px
+    border-radius: 5px
+    margin-top: 20px
+
 .embed
     font-family: monospace
     font-size: 14px
