make ota tokens truely ot [#206]

--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -1,5 +1,13 @@
 <!-- @format -->
 
+<app-protip uid="logincommand">
+  You can use the <a class="embedded link" href="/commands#login" target="_blank">sp!login</a> command 
+  to log in to the web interface without logging in to your browser
+  with Discord.<br />
+  <br />
+  But before, you need to enable this feature <a class="link" href="/usersettings#ota">here</a>.
+</app-protip>
+
 <div>
   <app-spinner id="spinner-load-guilds" [started]="true"></app-spinner>
   <div class="guilds-list-container">
