--- a/web/src/app/routes/usersettings/usersettings.component.html
+++ b/web/src/app/routes/usersettings/usersettings.component.html
@@ -3,6 +3,7 @@
 
     <div class="settings-container">
         <div class="mb-4">
+            <a id="apitoken"></a>
             <h2>API TOKEN</h2>
             <p class="mt-3">
                 <a href="https://github.com/zekroTJA/shinpuru/wiki/REST-API-Docs" target="_blank">
@@ -65,9 +66,15 @@
     </div>
     
     <div class="settings-container">
+        <a id="ota"></a>
         <h2>ONE TIME AUTH</h2>
         <app-spinner *ngIf="!ota" [started]="true"></app-spinner>
         <div *ngIf="ota" class="mt-3">
+            <p>
+                OTA is disabled by default, because it uses URL queries to pass the OTA credential, which is
+                considered to be unsafe. The risk of attack is minimized by setting the lifetime of the OTA token
+                to 60 seconds.
+            </p>
             <app-slider [(ngModel)]="ota.enabled">Enable</app-slider>
             <button class="bg-green" (click)="onOTASave()">SAVE</button>
         </div>
